﻿drkns 20.09.2014 17:53:05 +0200 - build 4113

1. VC10 fix.

drkns 20.09.2014 17:14:32 +0200 - build 4112

1. Уточнение 4111.

2. Неправильно определялась позиция ошибки при компиляции регулярного выражения.

3. Показываем текст и позицию при ошибке компиляции регулярного выражения или работы с ним.

drkns 20.09.2014 17:00:20 +0200 - build 4111

1. Именованные группы в регулярных выражениях. Пока только на уровне библиотеки.

drkns 19.09.2014 23:47:55 +0200 - build 4110

1. Разделим common.hpp на компоненты, а то совсем тёмный лес уже.

2. Не собиралось в gcc 4.8.1.

zg 19.09.2014 02:15:54 +0200 - build 4109

1. VE_CLOSE приходит в быстрый просмотр и информационную панель до удаления просмотра.

2. просмотр и редактор не удаляются во время обработки любых событий.

3. события от неактивных редакторов и просмотров могли не доходить до плагинов.

drkns 19.09.2014 01:29:27 +0200 - build 4108

1. Где-то между 4008 и 4012 немного погнулись регексы.

drkns 16.09.2014 23:49:54 +0200 - build 4107

1. Рефакторинг.

drkns 14.09.2014 18:38:33 +0200 - build 4106

1. Хендлы потоков асинхронной работы с БД закрывались не вовремя и могли накапливаться в неограниченном количестве.

drkns 14.09.2014 14:42:05 +0200 - build 4105

1. Рефакторинг.

drkns 14.09.2014 10:47:27 +0200 - build 4104

1. Уточнение 4100.

drkns 14.09.2014 02:11:01 +0200 - build 4103

1. Уточнение 4101.

zg 14.09.2014 01:46:47 +0200 - build 4102

1. уточнение 4100: повторный вызов DialogRun.

2. при переоткрытии файла в редакторе, из менеджера окон удалялось окно, которое не было предварительно туда добавлено.

drkns 14.09.2014 00:44:51 +0200 - build 4101

1. Уточнение 4100.

drkns 13.09.2014 22:50:49 +0200 - build 4100

1. При неудачном переключении из редактора в просмотр не освобождалась память.
   Добавлять очередной костыль бессмысленно, поэтому логика владения окнами переделана.
   Теперь нет окон на стеке, окон, удаляемых менеджером, ручного задавания способа удаления,