@@ -1,4 +1,8 @@
-﻿drkns 20.09.2014 17:53:05 +0200 - build 4113
+﻿drkns 20.09.2014 21:26:14 +0200 - build 4114
+
+1. Продолжение 4112.
+
+drkns 20.09.2014 17:53:05 +0200 - build 4113
 
 1. VC10 fix.
 
